fixed height issue on mobile and improved cards

--- a/matrix_style/styles.css
+++ b/matrix_style/styles.css
@@ -6,7 +6,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    height: 100vh;
+    min-height: 100dvh;
     margin: 0;
     padding: 0;
 }
@@ -40,7 +40,7 @@ main {
     max-width: 1200px;
     width: 100%;
     margin: 0 auto;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 .project {
     border-style: solid;
@@ -48,6 +48,8 @@ main {
     border-radius: 8px;
     padding: 15px;
     text-align: center;
+    max-width: fit-content;
+    justify-self: center;
 }
 .projects a {
     color: limegreen;
@@ -57,6 +59,8 @@ main {
 }
 .new-project {
     align-content: center;
+    max-width: 100%;
+    justify-self: auto;
 }
 .new-project a {
     text-decoration: none;
@@ -64,7 +68,7 @@ main {
     font-size: 60pt;
 }
 footer {
-    padding: 10px;
+    padding: 20px;
     font-size: 18px;
 }
 a {
@@ -88,7 +92,6 @@ a {
 @media (max-width: 768px) {
     .projects {
         grid-template-columns: 1fr;
-        max-width: 600px;
         width: 80%;
     }
 }
